tests/toy/neg/001647_mutation.toylang
program a = { while a do var sleep; } .
